// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nature-ui/alert  should also render correctly 1`] = `
<DocumentFragment>
  <div
    class="px-4 py-3 flex items-center w-full relative overflow-hidden bg-red-200 text-gray-800"
    role="alert"
  >
    <svg
      class="text-red-600 mr-3 css-rre05l-Icon"
      fill="none"
      focusable="false"
      height="1em"
      role="presentation"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <p
      class="font-bold mr-3"
    >
      Alert title
    </p>
    <p>
      Alert description
    </p>
  </div>
</DocumentFragment>
`;

exports[`@nature-ui/alert  should render correctly 1`] = `
<DocumentFragment>
  <div
    class="px-4 py-3 flex items-center w-full relative overflow-hidden bg-green-200 text-gray-800"
    role="alert"
  >
    <svg
      class="text-green-600 mr-3 css-rre05l-Icon"
      fill="none"
      focusable="false"
      height="1em"
      role="presentation"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
      />
      <polyline
        points="22 4 12 14.01 9 11.01"
      />
    </svg>
    <p
      class="font-bold"
    >
      Alert title
    </p>
    <p>
      Alert description
    </p>
  </div>
</DocumentFragment>
`;
